# llm_client

./: CONTRIBUTING.md  README.md  environment.yaml  main.py  pre-commit_config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  dependency-review.yml  lint.yml  release.yml  tests.yml
llm_client/: __init__.py  adapter.py  llm_client.py
notebooks/: RAGChatbot_README.md  RAGChatbot_groq_API.ipynb  RAGChatbot_groq_API_no_output.ipynb  README.md  utils.py
tests/: README.md  test_adapter.py  test_llm_client.py
